--- a/build.gradle
+++ b/build.gradle
@@ -38,3 +38,12 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+bootJar {
+    archiveBaseName.set("BudgetBud")
+    archiveVersion.set("0.0.1-SNAPSHOT")
+}
+
+jar {
+    enabled = false
+}
